fixed home card blanche not being centered on iphone

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -689,13 +689,16 @@ section.home-card {
     background: $white 0% 0% no-repeat padding-box;
     box-shadow: 0 3px 26px #00000010;
     border-radius: 10px;
-    margin: 0 1.25rem 1.5rem;
+    //#GN margin: 0 1.25rem 1.5rem;
+    margin: 0 0rem 1.5rem;
     min-height: 24rem;
     width: 17.75rem !important;
     @media screen and (min-width: 768px) and (max-width: 1439px) {
       text-align: center;
       min-height: 24rem;
       width: 21.875rem !important;
+
+      margin: 0 1.25rem 1.5rem;
     }
     @media screen and (min-width: 1440px) {
       min-height: 23.5rem;
